--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Project Adonis">
     <meta property="og:site_name" content="Project Adonis">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.projectadonis.github.io/">
+    <meta property="og:url" content="http://www.projectadonis.tech/">
     <meta property="og:image" content="/Pictures/pa-logo.ico">
   </head>
 <body style="background-color: #FFFBE9;">
@@ -48,7 +48,7 @@
       <div class='section-name' id='sec-projects'>PROJECTS</div>
       <div class='section-title'>All websites</div>
       <div class='projects-container'>
-        <a href="https://projectadonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds            <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
+        <a href="https://projectadonis.tech/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds            <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
           0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
@@ -59,7 +59,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/Chernobyl/" target="_blank"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
+        <a href="https://projectadonis.tech/Chernobyl/" target="_blank"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
@@ -71,7 +71,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/StableDiffusion" target="_blank"> <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>Stable Diffusion <br>Prompts
+        <a href="https://projectadonis.tech/StableDiffusion" target="_blank"> <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>Stable Diffusion <br>Prompts
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
@@ -83,7 +83,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/ChatGPT" target="_blank"> <div class='projects-item'><div class='item-number'>04</div><div class='item-text'>ChatGPT Prompts
+        <a href="https://projectadonis.tech/ChatGPT" target="_blank"> <div class='projects-item'><div class='item-number'>04</div><div class='item-text'>ChatGPT Prompts
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
@@ -95,7 +95,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/404" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Coming Soon!
+        <a href="https://projectadonis.tech/404" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Coming Soon!
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
@@ -107,7 +107,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/404" target="_blank"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Coming Soon!
+        <a href="https://projectadonis.tech/404" target="_blank"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Coming Soon!
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
