--- a/index.html
+++ b/index.html
@@ -72,9 +72,40 @@
           <div class="section-name" id="sec-projects">PROJECTS</div>
           <div class="section-title">All of my websites</div>
           <div class="projects-container">
-            <a href="https://enigmatech.site/" target="_blank">
+            <a href="https://projectadonis.tech/InSight/" target="_blank">
               <div class="projects-item">
                 <div class="item-number">01</div>
+                <div class="item-text">
+                  InSight<br />
+                  Articles<br />
+                  <svg
+                    style="
+                      display: inline-block;
+                      width: 1em;
+                      height: 1em;
+                      padding-top: 5px;
+                      fill: #5e5e5f;
+                    "
+                    viewbox="0 0 48 48"
+                  >
+                    <path
+                      d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
+          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
+          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6
+          6-6v-12c0-1.2-0.8-2-2-2z"
+                    ></path>
+                    <path
+                      d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
+          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
+          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
+          2-2v-12c0-0.2 0-0.6-0.2-0.8z"
+                    ></path>
+                  </svg>
+                </div></div
+            ></a>
+            <a href="https://enigmatech.site/" target="_blank">
+              <div class="projects-item">
+                <div class="item-number">02</div>
                 <div class="item-text">
                   Enigmatech
                   <svg
@@ -107,7 +138,7 @@
               target="_blank"
             >
               <div class="projects-item">
-                <div class="item-number">02</div>
+                <div class="item-number">03</div>
                 <div class="item-text">
                   Stable Diffusion <br />Prompts
                   <svg
@@ -140,7 +171,7 @@
               target="_blank"
             >
               <div class="projects-item">
-                <div class="item-number">03</div>
+                <div class="item-number">04</div>
                 <div class="item-text">
                   Immersive Worlds
                   <svg
@@ -170,7 +201,7 @@
             ></a>
             <a href="https://projectadonis.tech/Chernobyl/" target="_blank">
               <div class="projects-item">
-                <div class="item-number">04</div>
+                <div class="item-number">05</div>
                 <div class="item-text">
                   History: Chernobyl
                   <svg
@@ -198,65 +229,10 @@
                   </svg>
                 </div></div
             ></a>
-            <a href="https://projectadonis.tech/404" target="_blank">
-              <div class="projects-item">
-                <div class="item-number">05</div>
-                <div class="item-text">
-                  Coming Soon! <br />
-                  <svg
-                    style="
-                      display: inline-block;
-                      width: 1em;
-                      height: 1em;
-                      padding-top: 5px;
-                      fill: #5e5e5f;
-                    "
-                    viewbox="0 0 48 48"
-                  >
-                    <path
-                      d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
-          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
-          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6
-          6-6v-12c0-1.2-0.8-2-2-2z"
-                    ></path>
-                    <path
-                      d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
-          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
-          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
-          2-2v-12c0-0.2 0-0.6-0.2-0.8z"
-                    ></path>
-                  </svg>
-                </div></div
-            ></a>
             <a href="https://projectadonis.tech/ChatGPT" target="_blank">
               <div class="projects-item">
                 <div class="item-number">06</div>
-                <div class="item-text">
-                  Coming Soon! <br />
-                  <svg
-                    style="
-                      display: inline-block;
-                      width: 1em;
-                      height: 1em;
-                      padding-top: 5px;
-                      fill: #5e5e5f;
-                    "
-                    viewbox="0 0 48 48"
-                  >
-                    <path
-                      d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
-          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
-          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6
-          6-6v-12c0-1.2-0.8-2-2-2z"
-                    ></path>
-                    <path
-                      d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
-          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
-          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
-          2-2v-12c0-0.2 0-0.6-0.2-0.8z"
-                    ></path>
-                  </svg>
-                </div></div
+                <div class="item-text">Coming Soon! <br /></div></div
             ></a>
           </div>
         </section>
@@ -264,8 +240,8 @@
           <div class="section-name" id="sec-goal">GOAL</div>
           <div class="box-clients">
             <p class="speech">
-              <span></span>elegant [ˈeləɡənt] adjective: pleasingly ingenious
-              and simple. The guiding principle of this project.
+              <span></span>elegance, noun: pleasingly ingenious and simple.
+              <br />The guiding principle of this project.
             </p>
             <div class="id-signature">Elegance</div>
           </div>
